2019-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Detect end of file while reading
	RLE packets.  Fixes SourceForge issue #598 "heap-buffer-overflow
	in function ReadMIFFImage of coders/miff.c".

2019-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Fix heap buffer overflow while
	reading DirectClass XWD file.  Fixes SourceForge issue #597
	"heap-buffer-overflow in function ReadXWDImage of coders/xwd.c".

2019-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Fix small buffer overflow (one
	PixelPacket) of image colormap.  Fixes SourceForge issue #596
	"heap-buffer-overflow in function CloneImage of magick/image.c".

	* magick/colormap.c (ReallocateImageColormap): New function to
	reallocate an image colormap.

	* coders/logo.c: Make more static data const.

	* magick/module_aliases.h: Make more static data const.

	* magick/static.c: Make more static data const.

2019-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (LogMagickEventList): Log elapsed time with
	microsecond precision.

2019-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mpc.c (ReadMPCImage): Deal with a profile length of zero,
	or an irrationally large profile length.  Fixes SourceForge issue
	#601 "memory leak in function ReadMPCImage of coders/mpc.c ".

	* magick/xwindow.c (MagickXGetWindowInfo): Deal with the unlikely
	case that the memory allocation for window->segment_info
	fails. Fixes SourceForge #595 "use allocate memory before null
	check" as pertains to magick/xwindow.c.

	* magick/segment.c (Classify): Add check for memory allocation
	failure when allocating cluster array. Fixes SourceForge #595 "use
	allocate memory before null check" as pertains to
	magick/segment.c.

	* coders/pdb.c (ReadPDBImage): Fix use of allocated memory before
	null check.  Fixes SourceForge #595 "use allocate memory before